BCN-1194 fix overflow on user menu desktop

--- a/scss/bcn-discourse/_bcn-navigation.scss
+++ b/scss/bcn-discourse/_bcn-navigation.scss
@@ -18,7 +18,7 @@
     max-height: unset !important;
     // width: 100% !important;
     @media (min-width: $break-lg) {
-      overflow-y: auto !important;
+      // overflow-y: auto !important;
     }
   }
 
@@ -87,7 +87,6 @@
     a {
       color: $purple;
     }
-
   }
 
   @media (min-width: $break-lg) {
@@ -106,7 +105,7 @@
 
 .category-link {
   width: 100% !important;
-  position: relative; 
+  position: relative;
   display: block !important;
   padding: 0 !important;
 
